<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/scoreImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/image_margin"
        android:src="@drawable/bee" />

    <TextView
        android:id="@+id/score"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top"
        android:fontFamily="@font/unkemptbold"
        android:text="@string/score" />

    <TextView
        style="@style/Score"
        android:id="@+id/scoreNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/unkemptbold"
        android:text="@string/score_number" />

    <TextView
        android:id="@+id/scoreText"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scoreNumber"
        android:fontFamily="@font/unkemptbold"
        android:text="@string/score1" />

    <Button
        android:id="@+id/restart_button"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreText"
        android:text="@string/restart" />

</RelativeLayout>