<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/questionImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bee_six"

            />

        <ImageView
            android:id="@+id/questionImage2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ladybug_three" />

    </LinearLayout>

    <TextView
        android:id="@+id/checkQuestion"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/unkemptbold"
        android:text="@string/question2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkanswer1"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigLeftMargin"
                android:onClick="onCheckboxClicked"
                android:text="@string/q2answer1" />

            <CheckBox
                android:id="@+id/checkanswer2"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigLeftMargin"
                android:onClick="onCheckboxClicked"
                android:text="@string/q2answer2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkanswer3"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:onClick="onCheckboxClicked"
                android:text="@string/q2answer3" />

            <CheckBox
                android:id="@+id/checkanswer4"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:onClick="onCheckboxClicked"
                android:text="@string/q2answer4" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/next_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:visibility="invisible"/>
    </LinearLayout>

</LinearLayout>