<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/questionImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sunflower_one" />

        <ImageView
            android:id="@+id/questionImage2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_right"
            android:src="@drawable/flower_five" />

    </LinearLayout>

    <TextView
        android:id="@+id/textQuestion"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/unkemptbold"
        android:text="@string/question3" />

    <EditText
        android:id="@+id/textAnswer"
        style="@style/Numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send_button"
            style="@style/ButtonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            />

        <Button
            android:id="@+id/next_button"
            style="@style/ButtonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            />
    </LinearLayout>

</LinearLayout>