<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/scoreImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/image_margin"
        android:src="@drawable/mushroom" />

    <TextView
        android:id="@+id/score"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top"
        android:fontFamily="@font/unkemptbold"
        android:text="@string/score" />

    <TextView
        android:id="@+id/scoreNumber"
        style="@style/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/unkemptbold"
        android:text="@string/score_number" />

    <TextView
        android:id="@+id/scoreText"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreNumber"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/unkemptbold"
        android:text="@string/score1" />

    <ImageButton
        android:id="@+id/restartButton"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreText"
        android:onClick="returnToStart"
        android:src="@drawable/replay" />

</RelativeLayout>
</ScrollView>